// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js - flow-verify: a.js 1`] = `
// @flow
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow

`;

exports[`b.js - flow-verify: b.js 1`] = `
/**
 * @flow
 * @providesModule b
 */
require('./a');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @flow
 * @providesModule b
 */
require("./a");

`;

exports[`c.js - flow-verify: c.js 1`] = `
// @flow
require('./a.js');
require('b');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
require("./a.js");
require("b");

`;
